--- a/front_end/news_signUp_Form.html
+++ b/front_end/news_signUp_Form.html
@@ -4,13 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Newsletter/Signup with success</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png">
     <style>
+        @font-face {
+            font-family: 'Roboto';
+            src: url('./images/fonts/Roboto-Bold.ttf');
+            src: url('./images/fonts/Roboto-Regular.ttf');
+        }
         *{
             box-sizing: border-box;
         }
 
         body {
+            font-family: 'Roboto', sans-serif;
+            color: rgb(19, 13, 55);
             background-color: hsl(234, 29%, 20%);
             
 
@@ -45,8 +53,9 @@
                         /* border: 2px solid black; */
 
                         >h1{
-                            font-size: 40px;
                             margin-top: 0;
+                            margin-bottom: 10px;
+                            font-size: 50px;
                             font-weight: 900;
                         }
 
@@ -76,29 +85,42 @@
                         /* border: 1px solid red; */
                         margin-top:  20px;
 
-                        >label{
-                            font-size: 17px;
-                            margin: 10px 0;
+                        #label-container {
+                            display: inline;
+                            font-size: 12px;
+                            font-weight: 900;
+                        }
+
+                        #error_status {
+                            visibility: hidden;
+                            color: #fc6547;                         
                         }
 
                         >input{
                             width: 100%;
                             height: 40px;
                             margin: 10px 0;
-                            border-radius: 10px;
+                            border-radius: 5px;
                             outline: none;
-                            padding-left: 10px;
+                            padding: 25px 20px;
+                            font-size: medium;
                         }
 
                         >button{
                             width: 100%;
                             margin: 10px 0;
-                            height: 40px;
+                            height: 60px;
                             border-radius: 10px;
-                            background-image: linear-gradient(to right,#ff1a75,#ff471a);
+                            border: none;
+                            background: rgb(19, 13, 55);
+                            color: #fff;
+                            font-size: medium;
+                            font-weight: bold;
                         }
                         >button:hover{
-                            background-image: linear-gradient(to right,#ffbb00,#3300ff);;
+                            cursor: pointer;
+                            background-image: linear-gradient(to right,#ff527a,#ff6548);;
+                            box-shadow: 0px 5px 30px 15px #f6e0dc;
                         }
                     }
                     
@@ -145,37 +167,41 @@
                 <h1>
                     Stay updated!
                 </h1>
-                <p>join 60,000+ product managers recieving monthly updates on:</p>
+                <p>Join 60,000+ product managers recieving monthly updates on:</p>
 
                 <div>
-                    <img src="/images/images.png" alt="image">
-                    <p> product discovery and building what matters</p>
+                    <img src="./images/icon-list.svg" alt="image">
+                    <p> Product discovery and building what matters</p>
                 </div>
                 <div>
-                    <img src="/images/images.png" alt="image">
-                    <p> Maasuring to ensure updates are a success</p>
+                    <img src="./images/icon-list.svg" alt="image">
+                    <p> Measuring to ensure updates are a success</p>
                 </div>
                 <div>
-                    <img src="/images/images.png" alt="image">
-                    <p>And much more!</p>
+                    <img src="./images/icon-list.svg" alt="image">
+                    <p> And much more!</p>
                 </div>
             </div>
 
             <div id="form-container">
-                <label for="email">Email address</label><br>
-                <input type="email" id="email" name="email" placeholder="Enter email here"><br>
-                <button>Subscribe to monthly newsletter</button>
+                <div id="label-container">
+                    <label for="email">Email address</label>
+                    <label id="error_status">Valid email required</label>
+                </div>
+                <br>
+                <input type="email" id="email" name="email" placeholder="email@company.com"><br>
+                <button id="submit_btn">Subscribe to monthly newsletter</button>
             </div>
 
         </div>
 
 
         <div id="image-container">
-          <img src="/images/contact-us.png" alt="">
+          <img src="./images/illustration-sign-up-desktop.svg" alt="">
         </div>
 
     </main>
-
+    <script src="./script.js"></script>
 </body>
 
 </html>
